# cpp-project

./: .clang-format  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
